# digestive-functor-hsp

./: digestive-functors-hsp.cabal
Text/Digestive/HSP/: Html4.hs
debian/: changelog  control  rules
